// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`client/messaging/common-message-layout/TextMessage > message as a normal text 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-ewKWQi lczqpc"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-hZoehQ gpXEYv"
      tabindex="0"
    >
      <span
        class="sc-hKOsxR bpFDMS"
      >
        <i
          aria-hidden="true"
          class="sc-iXWgTX cKQkDT"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-iXWgTX cKQkDT"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-edvVIM BgKKj sc-iuKxBX dcHVMW"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-jmvSDW kJMgdI"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-iXWgTX cKQkDT"
    >
      : 
    </i>
    <span
      class="sc-dcDmxq joZYTb"
    >
      This is test message
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message mixing emoji and text renders them inline-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-ewKWQi lczqpc"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-hZoehQ gpXEYv"
      tabindex="0"
    >
      <span
        class="sc-hKOsxR bpFDMS"
      >
        <i
          aria-hidden="true"
          class="sc-iXWgTX cKQkDT"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-iXWgTX cKQkDT"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-edvVIM BgKKj sc-iuKxBX dcHVMW"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-jmvSDW kJMgdI"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-iXWgTX cKQkDT"
    >
      : 
    </i>
    <span
      class="sc-dcDmxq joZYTb"
    >
      nice game 
      <span
        class="sc-iucATu bAwULp"
      >
        🔥
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-ewKWQi lczqpc"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-hZoehQ gpXEYv"
      tabindex="0"
    >
      <span
        class="sc-hKOsxR bpFDMS"
      >
        <i
          aria-hidden="true"
          class="sc-iXWgTX cKQkDT"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-iXWgTX cKQkDT"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-edvVIM BgKKj sc-iuKxBX dcHVMW"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-jmvSDW kJMgdI"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-iXWgTX cKQkDT"
    >
      : 
    </i>
    <span
      class="sc-dcDmxq joZYTb"
    >
      here is a link 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link before a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-ewKWQi lczqpc"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-hZoehQ gpXEYv"
      tabindex="0"
    >
      <span
        class="sc-hKOsxR bpFDMS"
      >
        <i
          aria-hidden="true"
          class="sc-iXWgTX cKQkDT"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-iXWgTX cKQkDT"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-edvVIM BgKKj sc-iuKxBX dcHVMW"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-jmvSDW kJMgdI"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-iXWgTX cKQkDT"
    >
      : 
    </i>
    <span
      class="sc-dcDmxq joZYTb"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-edvVIM BgKKj sc-egVbnM hxTwgj"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-jmvSDW kJMgdI"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link between mentions 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-ewKWQi lczqpc"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-hZoehQ gpXEYv"
      tabindex="0"
    >
      <span
        class="sc-hKOsxR bpFDMS"
      >
        <i
          aria-hidden="true"
          class="sc-iXWgTX cKQkDT"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-iXWgTX cKQkDT"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-edvVIM BgKKj sc-iuKxBX dcHVMW"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-jmvSDW kJMgdI"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-iXWgTX cKQkDT"
    >
      : 
    </i>
    <span
      class="sc-dcDmxq joZYTb"
    >
      hey
       
      <span
        class="sc-edvVIM BgKKj sc-egVbnM hxTwgj"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-jmvSDW kJMgdI"
        >
                     
        </span>
      </span>
       see 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-edvVIM BgKKj sc-egVbnM hxTwgj"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-jmvSDW kJMgdI"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-ewKWQi lczqpc"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-hZoehQ gpXEYv"
      tabindex="0"
    >
      <span
        class="sc-hKOsxR bpFDMS"
      >
        <i
          aria-hidden="true"
          class="sc-iXWgTX cKQkDT"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-iXWgTX cKQkDT"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-edvVIM BgKKj sc-iuKxBX dcHVMW"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-jmvSDW kJMgdI"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-iXWgTX cKQkDT"
    >
      : 
    </i>
    <span
      class="sc-dcDmxq joZYTb"
    >
      hey
       
      <span
        class="sc-edvVIM BgKKj sc-egVbnM hxTwgj"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-jmvSDW kJMgdI"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention before a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-ewKWQi lczqpc"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-hZoehQ gpXEYv"
      tabindex="0"
    >
      <span
        class="sc-hKOsxR bpFDMS"
      >
        <i
          aria-hidden="true"
          class="sc-iXWgTX cKQkDT"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-iXWgTX cKQkDT"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-edvVIM BgKKj sc-iuKxBX dcHVMW"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-jmvSDW kJMgdI"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-iXWgTX cKQkDT"
    >
      : 
    </i>
    <span
      class="sc-dcDmxq joZYTb"
    >
      <span
        class="sc-edvVIM BgKKj sc-egVbnM hxTwgj"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-jmvSDW kJMgdI"
        >
                     
        </span>
      </span>
       go to 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention between links 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-ewKWQi lczqpc"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-hZoehQ gpXEYv"
      tabindex="0"
    >
      <span
        class="sc-hKOsxR bpFDMS"
      >
        <i
          aria-hidden="true"
          class="sc-iXWgTX cKQkDT"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-iXWgTX cKQkDT"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-edvVIM BgKKj sc-iuKxBX dcHVMW"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-jmvSDW kJMgdI"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-iXWgTX cKQkDT"
    >
      : 
    </i>
    <span
      class="sc-dcDmxq joZYTb"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-edvVIM BgKKj sc-egVbnM hxTwgj"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-jmvSDW kJMgdI"
        >
                     
        </span>
      </span>
       or here 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention of self user 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-ewKWQi btpJXv"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-hZoehQ gpXEYv"
      tabindex="0"
    >
      <span
        class="sc-hKOsxR bpFDMS"
      >
        <i
          aria-hidden="true"
          class="sc-iXWgTX cKQkDT"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-iXWgTX cKQkDT"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-edvVIM BgKKj sc-iuKxBX dcHVMW"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-jmvSDW kJMgdI"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-iXWgTX cKQkDT"
    >
      : 
    </i>
    <span
      class="sc-dcDmxq joZYTb"
    >
      Hey
       
      <span
        class="sc-edvVIM BgKKj sc-egVbnM hxTwgj"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-jmvSDW kJMgdI"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with only emoji renders them jumbo-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-ewKWQi lczqpc"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-hZoehQ gpXEYv"
      tabindex="0"
    >
      <span
        class="sc-hKOsxR bpFDMS"
      >
        <i
          aria-hidden="true"
          class="sc-iXWgTX cKQkDT"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-iXWgTX cKQkDT"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-edvVIM BgKKj sc-iuKxBX dcHVMW"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-jmvSDW kJMgdI"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-iXWgTX cKQkDT"
    >
      : 
    </i>
    <span
      class="sc-dcDmxq joZYTb"
    >
      <span
        class="sc-iucATu bLJJAa"
      >
        🔥🔥
      </span>
       
      <span
        class="sc-iucATu bLJJAa"
      >
        🎉
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with too many emoji for jumbo stays inline-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-ewKWQi lczqpc"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-hZoehQ gpXEYv"
      tabindex="0"
    >
      <span
        class="sc-hKOsxR bpFDMS"
      >
        <i
          aria-hidden="true"
          class="sc-iXWgTX cKQkDT"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-iXWgTX cKQkDT"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-edvVIM BgKKj sc-iuKxBX dcHVMW"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-jmvSDW kJMgdI"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-iXWgTX cKQkDT"
    >
      : 
    </i>
    <span
      class="sc-dcDmxq joZYTb"
    >
      <span
        class="sc-iucATu bAwULp"
      >
        😀😀😀😀😀😀😀😀😀😀😀
      </span>
    </span>
  </div>
</div>
`;
